--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mongoose-fuzzy-searching",
-  "version": "2.0.2",
+  "name": "rever-mongoose-fuzzy-searching",
+  "version": "3.0.0",
   "author": "Vassilis Pallas <vspallas@gmail.com>",
   "description": "Mongoose fuzzy searching plugin",
   "main": "index.js",
@@ -41,7 +41,7 @@
   "homepage": "https://github.com/VassilisPallas/mongoose-fuzzy-searching",
   "license": "MIT",
   "peerDependencies": {
-    "mongoose": "5.10.x"
+    "mongoose": "^7.8.x"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -51,10 +51,10 @@
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "jest": "^29.7.0",
     "lint-staged": "^10.2.2",
-    "mongodb-memory-server": "^6.6.0",
-    "mongoose": "^5.10.11",
+    "mongodb-memory-server": "^10.1.4",
+    "mongoose": "^7.8.x",
     "prettier": "^2.0.5"
   }
 }
