--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rever-mongoose-fuzzy-searching",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "author": "Vassilis Pallas <vspallas@gmail.com>",
   "description": "Mongoose fuzzy searching plugin",
   "main": "index.js",
@@ -41,7 +41,7 @@
   "homepage": "https://github.com/VassilisPallas/mongoose-fuzzy-searching",
   "license": "MIT",
   "peerDependencies": {
-    "mongoose": "^7.8.x"
+    "mongoose": "^8.x.x"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
